// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stress renders 0 1`] = `
Array [
  .c0 {
  stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders function 1`] = `
Array [
  .c0 {
  stress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  stress: has;
}

<div
    className="c0"
  />,
  .c0 {
  stress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  stress: has;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders invalid theme path 1`] = `
Array [
  .c0 {
  stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  stress: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders negative number 1`] = `
Array [
  .c0 {
  stress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  stress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  stress: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  stress: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  stress: July;
}

@media screen and (min-width:November) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  stress: July;
}

@media screen and (min-width:November) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  stress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    stress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  stress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    stress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    stress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    stress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    stress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    stress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    stress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    stress: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  stress: July;
}

@media May {
  .c0 {
    stress: August;
  }
}

@media April {
  .c0 {
    stress: September;
  }
}

@media January {
  .c0 {
    stress: November;
  }
}

@media April {
  .c0 {
    stress: August;
  }
}

@media June {
  .c0 {
    stress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  stress: July;
}

@media May {
  .c0 {
    stress: August;
  }
}

@media April {
  .c0 {
    stress: September;
  }
}

@media January {
  .c0 {
    stress: November;
  }
}

@media April {
  .c0 {
    stress: August;
  }
}

@media June {
  .c0 {
    stress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  stress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    stress: November;
  }
}

@media April {
  .c0 {
    stress: January;
  }
}

@media January {
  .c0 {
    stress: December;
  }
}

@media April {
  .c0 {
    stress: April;
  }
}

@media June {
  .c0 {
    stress: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  stress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    stress: November;
  }
}

@media April {
  .c0 {
    stress: January;
  }
}

@media January {
  .c0 {
    stress: December;
  }
}

@media April {
  .c0 {
    stress: April;
  }
}

@media June {
  .c0 {
    stress: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    stress: July;
  }
}

@media April {
  .c0 {
    stress: August;
  }
}

@media January {
  .c0 {
    stress: September;
  }
}

@media April {
  .c0 {
    stress: November;
  }
}

@media June {
  .c0 {
    stress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    stress: July;
  }
}

@media April {
  .c0 {
    stress: August;
  }
}

@media January {
  .c0 {
    stress: September;
  }
}

@media April {
  .c0 {
    stress: November;
  }
}

@media June {
  .c0 {
    stress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    stress: January;
  }
}

@media April {
  .c0 {
    stress: December;
  }
}

@media January {
  .c0 {
    stress: April;
  }
}

@media April {
  .c0 {
    stress: May;
  }
}

@media June {
  .c0 {
    stress: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    stress: January;
  }
}

@media April {
  .c0 {
    stress: December;
  }
}

@media January {
  .c0 {
    stress: April;
  }
}

@media April {
  .c0 {
    stress: May;
  }
}

@media June {
  .c0 {
    stress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders postitive number 1`] = `
Array [
  .c0 {
  stress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  stress: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders string 1`] = `
Array [
  .c0 {
  stress: July;
}

<div
    className="c0"
  />,
  .c0 {
  stress: July;
}

<div
    className="c0"
  />,
  .c0 {
  stress: June;
}

<div
    className="c0"
  />,
  .c0 {
  stress: June;
}

<div
    className="c0"
  />,
]
`;

exports[`stress renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`stress renders valid theme path 1`] = `
Array [
  .c0 {
  stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
